# yaml-datastore

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: keypath.rs  lib.rs
tests/data/: complete.yaml  duplicate.yaml  no_tags.yaml
