[package]
name = "yaml-datastore"
version = "0.1.0"
edition = "2024"
authors = ["Dan Fego <dan.fego@gmail.com>"]
description = "API for using a set of YAML files as a cohesive datastore."
keywords = ["yaml", "datastore", "search"]
categories = [
    "database-implementations",
    "filesystem",
    "parser-implementations",
]
license = "MIT"
repository = "http://github.com/dfego/yaml-datastore/"
readme = "README.md"
exclude = [".github/", "tests/"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
